--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <h1 id="re">you</h1>
+    <h1 id="re">My password</h1>
  <script src="index.js" ></script>
   </body>
 </html>
