--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Password Generator</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <h1 id="re">My password</h1>
- <script src="index.js" ></script>
+    <div class="container">
+      <h1 id="re">My Password</h1>
+      
+      <button >Generate</button>
+    </div>
+    <script src="index.js"></script>
   </body>
 </html>
