--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <title>Password Generator</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
     <div class="container">
       <h1 id="re">My Password</h1>
-      
-      <button >Generate</button>
+      <button id="generate-button">Generate</button>
+      <button id="copy-button">Copy</button> 
     </div>
     <script src="index.js"></script>
   </body>
