--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div class="container">
       <h1 id="re">My Password</h1>
       <button id="generate-button">Generate</button>
-      <button id="copy-button">Copy</button> 
+      <button id="copy-button">Copy</button> <br>
+     <p style="font-size: 14px; color: #555; margin-top: 10px;" >Once generated, save it somewhere safe—you might not see it again.</p>
+
     </div>
     <script src="index.js"></script>
   </body>
