--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <button id="generate-button">Generate</button>
       <button id="copy-button">Copy</button> <br>
      <p style="font-size: 14px; color: #555; margin-top: 10px;" >Once generated, save it somewhere safe—you might not see it again.</p>
-
+     <p style="font-size: 14px; color: #555; margin-top: 10px;" >OPress ctrl + shift + I and go to console to see passwords generated in this session.</p>
     </div>
     <script src="index.js"></script>
   </body>
