--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Generator</title>
     <link rel="stylesheet" href="style.css" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7342665808379751"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container">
@@ -14,15 +16,7 @@
      <p style="font-size: 14px; color: #555; margin-top: 10px;" >Once generated, save it somewhere safe—you might not see it again.</p>
      <p style="font-size: 14px; color: #555; margin-top: 10px;" >Press ctrl + shift + I and go to console to see passwords generated in this session.</p>
     </div>
-     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <ins class="adsbygoogle"
-       style="display:block"
-       data-ad-client="ca-pub-XXXXXXX"  <!-- Your AdSense publisher ID -->
-       data-ad-slot="XXXXXXX"           <!-- Your AdSense ad slot ID -->
-       data-ad-format="auto"></ins>
-  <script>
-       (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
+    
     <script src="index.js"></script>
   </body>
 </html>
