--- a/index.html
+++ b/index.html
@@ -5,18 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Generator</title>
     <link rel="stylesheet" href="style.css" />
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7342665808379751"
-     crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7342665808379751" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container">
       <h1 id="re">My Password</h1>
       <button id="generate-button">Generate</button>
       <button id="copy-button">Copy</button> <br>
-     <p style="font-size: 14px; color: #555; margin-top: 10px;" >Once generated, save it somewhere safe—you might not see it again.</p>
-     <p style="font-size: 14px; color: #555; margin-top: 10px;" >Press ctrl + shift + I and go to console to see passwords generated in this session.</p>
+      <p style="font-size: 14px; color: #555; margin-top: 10px;">Once generated, save it somewhere safe—you might not see it again.</p>
+      <p style="font-size: 14px; color: #555; margin-top: 10px;">Press ctrl + shift + I and go to console to see passwords generated in this session.</p>
     </div>
-    
+
+    <!-- AdSense Ad -->
+    <div class="ad-container" style="margin-top: 20px; text-align: center;">
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-7342665808379751" 
+           data-ad-slot="XXXXXXX"                  
+           data-ad-format="auto"></ins>
+      <script>
+           (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
